Add watchdo and DelayedOff

--- a/platformio.ini
+++ b/platformio.ini
@@ -17,6 +17,7 @@ lib_extra_dirs = ../libs
 lib_deps = 
 	knx
 	adafruit/Adafruit NeoPixel@^1.10.4
+	adafruit/Adafruit SleepyDog Library@^1.6.0
 build_flags = 
 	-DMASK_VERSION=0x07B0
 	-DKNX_FLASH_SIZE=980
