Add submodules and documentation

--- a/platformio.ini
+++ b/platformio.ini
@@ -13,11 +13,10 @@ platform = atmelsam
 board = adafruit_qt_py_m0
 framework = arduino
 monitor_speed = 115200
-lib_extra_dirs = ../libs
 lib_deps = 
-	knx
-	adafruit/Adafruit NeoPixel@^1.10.4
-	adafruit/Adafruit SleepyDog Library@^1.6.0
+	adafruit/Adafruit NeoPixel@1.10.4
+	adafruit/Adafruit SleepyDog Library@1.6.0
 build_flags = 
 	-DMASK_VERSION=0x07B0
-	-DKNX_FLASH_SIZE=980
+	-DKNX_FLASH_SIZE=1024
+	-DEEPROM_EMULATION_SIZE=2048
